project(carbon)
cmake_minimum_required(VERSION 2.4.0)
# Keep CMake quiet...
if(COMMAND cmake_policy)
    cmake_policy(SET CMP0003 NEW)
endif(COMMAND cmake_policy)

set(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_CURRENT_SOURCE_DIR}/README.md")
set(CPACK_GENERATOR "TBZ2")
set(CPACK_SOURCE_GENERATOR "TBZ2")
set(CPACK_PACKAGE_VERSION_MAJOR "0")
set(CPACK_PACKAGE_VERSION_MINOR "1")
set(CPACK_PACKAGE_VERSION_PATCH "0")
set(CARBON_VERSION "${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}")
set(CARBON_VERSION_FULL "${CARBON_VERSION}.${CPACK_PACKAGE_VERSION_PATCH}")
set(CPACK_SOURCE_PACKAGE_FILE_NAME "${CMAKE_PROJECT_NAME}-${CARBON_VERSION_FULL}")
set(CPACK_SOURCE_IGNORE_FILES  "/.svn/;/.git/;.gitignore;.project;CMakeLists.txt.user")
include(CPack)
set(CARBON_EXTENSION ".sync")
set(CARBON_INFO_EXTENSION ".info")
set(CARBON_LOCK_EXTENSION ".lock")
set(CARBON_LOG_EXTENSION ".log")
set(CARBON_EXCLUDE_EXTENSION ".exclude")
set(CARBON_PREFIX "CARBON:")
set(CARBON_MSG_PREFIX "INFO:")
set(CARBON_ERROR_PREFIX "ERROR:")
set(CARBON_GUI_PARENT "CARBON_GUI_PARENT")
set(CARBON_LOWEST_UID 1000)
set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
include(CheckFunctionExists)
include_directories(${CMAKE_CURRENT_BINARY_DIR})

set(SHARE_INSTALL_PREFIX "${CMAKE_INSTALL_PREFIX}/share"
    CACHE PATH "Define install directory for read-only architecture-independent data")

find_package(Qt5Widgets REQUIRED)
set(QTLIBS ${Qt5Core_LIBRARIES} ${Qt5Widgets_LIBRARIES} ${Qt5Gui_LIBRARIES})
set(QTINCLUDES ${Qt5Widgets_INCLUDE_DIRS} ${Qt5Network_INCLUDE_DIRS} ${Qt5Core_INCLUDE_DIRS})
add_definitions(${Qt5Widgets_DEFINITIONS})
set(CMAKE_CXX_FLAGS "${Qt5Widgets_EXECUTABLE_COMPILE_FLAGS}")
find_package(Qt5DBus)
if (Qt5DBus_FOUND)
    set(QT_QTDBUS_FOUND 1) # required for config.h !!!
    set(QTLIBS ${QTLIBS} ${Qt5DBus_LIBRARIES})
    set(QTINCLUDES ${QTINCLUDES} ${Qt5DBus_INCLUDE_DIRS})
    add_definitions(${Qt5DBus_DEFINITIONS})
endif (Qt5DBus_FOUND)

configure_file(config.h.cmake ${CMAKE_BINARY_DIR}/config.h)

add_subdirectory(support)
add_subdirectory(crontab)
add_subdirectory(ui)
add_subdirectory(scripts)
add_subdirectory(icons)

